Apply page settings & order

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,12 +22,7 @@ if(userSession === null){
 options.push({"name": "Watchlist", "url": "/watchlist", "highlight": ["watchlist"]},);
 
 const DEFAULT_DESC = `Unreal Tournament stats tracking website.`;
-
-
-
-%>
-
-<!DOCTYPE html>
+%><!DOCTYPE html>
 <html lang="en">
 <head>
     <title><%= title %></title>
