Page layout editor layout, no recreating elements

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -120,6 +120,7 @@ function renderCategory(mode){
     "userSession": userSession,
     meta
     }) -%>
+<link rel="stylesheet" type="text/css" href="css/admin.css">
 <script src="../js/ui/ui.js"></script>
 <script src="../js/ui/admin.js"></script>
 
