Home most played gametypes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -97,6 +97,12 @@
                         renderServerList("#root", <%- JSON.stringify(serversList) %>);
                     <%
                 } break;
+
+                case "Most Played Gametypes": {
+                    %>
+                        homeRenderMostPlayedGametypes("#root", <%- JSON.stringify(mostPlayedGametypes) %>);
+                    <%
+                } break;
             }
         }
     }
