--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,6 +53,7 @@
 </div>
 <script>
     
+    new UICalendarHeatMap("#root", "Activity HeatMap");
     <% 
 
     for(let i = 0; i < pageLayout.length; i++){
