--- a/public/css/main.css
+++ b/public/css/main.css
@@ -807,28 +807,6 @@ canvas{
 	padding:5px;
 }
 
-.basic-mouse-over-wrapper{
-	display:inline-block;
-
-}
-
-.basic-mouse-over{
-	position:absolute;
-	background-color:var(--bg-color-5);
-	border:1px solid var(--border-color-1);
-	padding:var(--padding-2);
-	font-size:12px;
-	color:white;
-	max-width:300px;
-}
-
-.basic-mouse-over-title{
-	font-weight:bold;
-	font-size:14px;
-	padding-bottom: 5px;
-}
-
-
 .basic-team-score{
 	padding:var(--padding-1);
 }
@@ -1233,4 +1211,10 @@ nav a:hover{
 
 .empty-date{
 	background-color:rgba(0,0,0,0.25);
+}
+
+.basic-mouse-over{
+	background-color:green;
+	position:absolute;
+	padding:5px;
 }
