--- a/views/match.ejs
+++ b/views/match.ejs
@@ -35,7 +35,7 @@
 
             case "Display Screenshot": {
 
-                %>renderMatchScreenshot("#root", parsedData);<%
+                %>UIMatchScreenshot("#root", parsedData);<%
 
             }  break;
 
