--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,8 @@
 	--bg-color-3:rgb(42,42,42);
 	--bg-color-4:rgb(56,56,56);
 	--bg-color-5:rgb(18,18,18);
+	--header-bg-color:rgb(25, 52, 71);
+	--header-bg-color-2:rgb(21,39,51);
 	--font-color-1:rgb(255,255,255);
 	--font-color-2:rgb(196,196,196);
 	--font-color-3:yellow;
@@ -259,6 +261,7 @@ table{
     font-size:14px;
     text-align: center;
     margin-bottom:var(--margin-1);
+	background-color: var(--bg-color-2);
 }
 
 .table-title{
@@ -271,10 +274,8 @@ table{
 
 th{
     padding:var(--padding-1) var(--padding-3);
-    color:yellow;
     font-weight:normal;
-	background-color:var(--bg-color-2);
-	border:1px solid var(--border-color-3);
+	background-color:var(--header-bg-color-2);
 	font-weight:500;
 	font-size:var(--font-size-4);
 }
@@ -304,14 +305,10 @@ th a{
 }
 
 tr:nth-child(even){
-    background-color:var(--bg-color-2);
-}
-tr:nth-child(odd){
-    background-color:var(--bg-color-3);
+	background-color: rgba(0,0,0,0.25);
 }
 
-
-tr:nth-child(even):hover, tr:nth-child(odd):hover{
+tr:hover{
 	background-color:var(--bg-color-1);
 }
 
@@ -740,10 +737,12 @@ canvas{
     text-align:center;
     padding:15px;
     color:var(--font-color-1);
-    background-color:var(--bg-color-2);
+    background-color:var(--header-bg-color);
     font-weight:500;
     margin-bottom:25px;
     font-size:16px;
+	letter-spacing: 1px;
+	border:1px solid rgba(255,255,255,0.05);
 }
 
 
