Delete match now affects CTF League Tables
Also fixed delete match error if match is the only one played on a map. Fixed CTF League page not rendering before clicking the search button on the gametypes page. Fix non ctf matches being counted in the totals matches for gametypes and combined tables

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -29,7 +29,7 @@ const modes = [
     {
         "display": "Matches Manager",
         "value": "matches",
-        "description": "Delete Matches"
+        "description": "Delete Matches, Delete Duplicate Matches"
     }
 ];
 
